@@ -71,6 +71,7 @@
 
 #include "src/slurmctld/acct_policy.h"
 #include "src/slurmctld/basil_interface.h"
+#include "src/slurmctld/gang.h"
 #include "src/slurmctld/job_scheduler.h"
 #include "src/slurmctld/licenses.h"
 #include "src/slurmctld/locks.h"
@@ -104,6 +105,7 @@ static int  _restore_node_state(struct node_record *old_node_table_ptr,
 static int  _sync_nodes_to_comp_job(void);
 static int  _sync_nodes_to_jobs(void);
 static int  _sync_nodes_to_active_job(struct job_record *job_ptr);
+static int  _update_preempt(uint16_t old_enable_preempt);
 #ifdef 	HAVE_ELAN
 static void _validate_node_proc_count(void);
 #endif
@@ -755,6 +757,7 @@ int read_slurm_conf(int recover)
 	int old_node_record_count;
 	struct node_record *old_node_table_ptr;
 	char *old_auth_type       = xstrdup(slurmctld_conf.authtype);
+	uint16_t old_enable_preempt = slurmctld_conf.enable_preemption;
 	char *old_checkpoint_type = xstrdup(slurmctld_conf.checkpoint_type);
 	char *old_crypto_type     = xstrdup(slurmctld_conf.crypto_type);
 	char *old_sched_type      = xstrdup(slurmctld_conf.schedtype);
@@ -891,6 +894,9 @@ int read_slurm_conf(int recover)
 			       old_auth_type, old_checkpoint_type,
 			       old_crypto_type, old_sched_type, 
 			       old_select_type, old_switch_type);
+	error_code = MAX(error_code, rc);	/* not fatal */
+
+	rc = _update_preempt(old_enable_preempt);
 	error_code = MAX(error_code, rc);	/* not fatal */
 
 	/* Update plugin parameters as possible */
@@ -1035,6 +1041,30 @@ static int  _preserve_select_type_param(slurm_ctl_conf_t *ctl_conf_ptr,
 		}
 	}
 	return rc;
+}
+
+/* Start or stop the gang scheduler module as needed based upon changes in 
+ *	job preemption support */
+static int _update_preempt(uint16_t old_enable_preempt)
+{
+	uint16_t new_enable_preempt = slurm_get_enable_preemption();
+
+	if (old_enable_preempt == new_enable_preempt)
+		return SLURM_SUCCESS;
+
+	if (old_enable_preempt == 0) {
+		info("Enabling job preemption and gang scheduling");
+		return gs_init();
+	}
+
+	if (new_enable_preempt == 0) {
+		info("Disabling job preemption and gang scheduling");
+		return gs_fini();
+	}
+
+	error("Invalid value for EnablePreemption (old:%u new:%u)",
+	      old_enable_preempt, new_enable_preempt);
+	return EINVAL;
 }
 
 /*
