@@ -3,7 +3,10 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 2.1.0-pre3
 =============================
- -- Added configuration parameter EnablePreemption=yes/no.
+ -- Removed sched/gang plugin and moved the logic directly into the slurmctld
+    daemon so that job preemption and gang scheduling can be used with the
+    sched/backfill plugin. Added EnablePreemption=yes/no configuration 
+    parameter to enable/disable the job preemption logic (disabled by default).
  -- If the --partition option is used with the sinfo or squeue command then
     print information about even hidden partitions.
 
@@ -84,7 +87,8 @@ documents those changes that are of interest to users and admins.
  -- Better logging for when job's request bad output file locations.
  -- Fix issue where if user specified non-existant file to write to slurmstepd
     will regain privileges before sending batch script ended to the controller.
- -- Fix bug when using the priority_multifactor plugin with no associations yet.
+ -- Fix bug when using the priority_multifactor plugin with no associations 
+    yet.
  -- BLUEGENE - we no longer check for the images to sync state.  This was 
     needed long ago when rebooting blocks wasn't a possibility and should 
     had been removed when that functionality was available.
